--- a/CPPv3/CPP-FrontEnd/CPP-FrontEnd/app/views/wbs.html
+++ b/CPPv3/CPP-FrontEnd/CPP-FrontEnd/app/views/wbs.html
@@ -1888,19 +1888,26 @@
                                         <thead style="height: 5%; position: sticky; top: 0; background: #FFF">
                                             <tr class="table-background">
                                                 <td style="width: 20px; padding-left:5px;"></td>
-
+                                                <td class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
+                                                    style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap; background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
+                                                    Number (#)
+                                                </td>
                                                 <td class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
                                                     style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap; background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
                                                     Title
                                                 </td>
                                                 <td class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
                                                     style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap; background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
-                                                    Document Name
+                                                    Change Order Type
+                                                </td>
+                                                <td class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
+                                                    style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap; background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
+                                                    Value
                                                 </td>
 
                                                 <td class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
                                                     style="position: relative; text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
-                                                    Change Order Type
+                                                    Schedule Impact
                                                 </td>
 
                                                 <td class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
@@ -1910,33 +1917,33 @@
 
                                                 <!--Commented by Jignesh (29-10-2020)-->
                                                 <!--<th class="th-c sortable" data-sortable="true" st-sort="Lane" data-field="name" scope="col"
-                                                    style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
-                                                    Title
-                                                </th>
+        style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;" data-sortable="true">
+        Title
+    </th>
 
 
-                                                <th class="th-c sortable" data-sortable="true" st-sort="AvgDwellTime" scope="col"
-                                                    style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
-                                                    Client Order #     Manasi 24-07-2020
-                                                </th>
+    <th class="th-c sortable" data-sortable="true" st-sort="AvgDwellTime" scope="col"
+        style="position: relative;  text-align:left !important; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
+        Client Order #     Manasi 24-07-2020
+    </th>
 
 
-                                                <th class="th-c sortable" st-sort="Occupancy" scope="col"
-                                                    style="position: relative; text-align:left !important; padding-left: 0; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
-                                                    Amount
-                                                </th>
-                                                <th class="th-c sortable" st-sort="Occupancy" scope="col"
-                                                    style="position: relative;  text-align:left !important; padding-left: 0; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
-                                                    Date
-                                                </th>
-                                                <th class="th-c sortable" data-field="AvgEntryTime" data-sortable="true" st-sort="AvgEntryTime" scope="col"
-                                                    style="position: relative;  text-align:left !important; padding-left: 0; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
-                                                    Note
-                                                </th>-->
+    <th class="th-c sortable" st-sort="Occupancy" scope="col"
+        style="position: relative; text-align:left !important; padding-left: 0; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
+        Amount
+    </th>
+    <th class="th-c sortable" st-sort="Occupancy" scope="col"
+        style="position: relative;  text-align:left !important; padding-left: 0; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
+        Date
+    </th>
+    <th class="th-c sortable" data-field="AvgEntryTime" data-sortable="true" st-sort="AvgEntryTime" scope="col"
+        style="position: relative;  text-align:left !important; padding-left: 0; padding: 12px 8px; text-overflow: ellipsis;white-space: nowrap;  background: #fff !important; color: #2c2e2f !important;">
+        Note
+    </th>-->
                                                 <!--<th class="th-c sortable" data-sortable="true" st-sort="EntryRate" scope="col"
-                                                    style="position: relative; width: 10%; text-align:left !important; padding-left: 0; padding: 2%; background: #F5F6FA !important; border-bottom: none; color: #A3A6B4 !important;">
-                                                    File
-                                                </th>-->
+        style="position: relative; width: 10%; text-align:left !important; padding-left: 0; padding: 2%; background: #F5F6FA !important; border-bottom: none; color: #A3A6B4 !important;">
+        File
+    </th>-->
                                             </tr>
                                         </thead>
                                         <tbody id="program_element_change_order_table_id"></tbody>
