--- a/CPPv3/CPP-FrontEnd/CPP-FrontEnd/app/views/userReports.html
+++ b/CPPv3/CPP-FrontEnd/CPP-FrontEnd/app/views/userReports.html
@@ -273,7 +273,7 @@
     </div>
 
     <div class="c-modal-footer">
-        <button type="button" class="btn btn-info w100" data-dismiss="modal" ng-click="goBack('close')">Close</button><!--changes done by shweta 16-7-2020-->
+        <!--<button type="button" class="btn btn-info w100" data-dismiss="modal" ng-click="goBack('close')">Close</button>--><!--changes done by shweta 16-7-2020-->
         <button type="button" class="btn btn-info w100" ng-click="generateReport()">Run</button><!--changes done by shweta 16-7-2020-->
     </div>
 </div>
